tests/error/misc_errors/unexpected_body.err
Error: Unexpected function body (at $FILE:6:4)
  | 
4 | @guppy.declare
5 | def foo() -> int:
6 |     return 42
  |     ^^^^^^^^^ Body of declared function `foo` must be empty

Guppy compilation failed due to 1 previous error
